<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">android-mobile-banking</string>

    <string name="input_pin">Masukkan PIN</string>
    <string name="forgot_pin">Lupa PIN?</string>
    <string name="donthave_account">Belum punya akun?</string>
    <string name="diawasi">Aplikasi ini diawasi oleh </string>
    <string name="diawasi2">Aplikasi ini terdaftar dan diawasi oleh Otoritas Jasa Keuangan </string>
    <string name="belum_punya_akun">Belum punya akun? </string>
    <string name="mbanking">di mySharia </string>
    <string name="signup_uppercase">SIGN UP </string>
    <string name="login">Login </string>
    <string name="register">Register </string>

    <string name="terms_title">Syarat dan Ketentuan</string>
    <string name="terms_subtitle">FASILITAS Nasaabah "mySharia"</string>


<!--    <string name="tnc_text">-->
<!--        <![CDATA[-->
<!--       <p>Apakah Lorem Ipsum itu? <br>-->
<!--        Lorem Ipsum adalah contoh teks atau dummy dalam industri percetakan dan penataan huruf atau typesetting.-->
<!--        <br>Lorem Ipsum telah menjadi standar contoh teks sejak tahun 1500an, saat seorang tukang cetak yang tidak dikenal mengambil sebuah kumpulan teks dan mengacaknya untuk menjadi sebuah buku contoh huruf. Ia tidak hanya bertahan selama 5 abad, tapi juga telah beralih ke penataan huruf elektronik, tanpa ada perubahan apapun. Ia mulai dipopulerkan pada tahun 1960 dengan diluncurkannya lembaran-lembaran Letraset yang menggunakan kalimat-kalimat dari Lorem Ipsum, dan seiring munculnya perangkat lunak Desktop Publishing seperti Aldus PageMaker juga memiliki versi Lorem Ipsum.</p>-->
<!--    ]]>-->
<!--      </string>-->

        <string name="tnc_text">
            Lorem Ipsum adalah contoh teks atau dummy dalam industri percetakan dan penataan huruf atau typesetting.</string>

    <string name="system_error_title">Sori!</string>
    <string name="system_error_desc">Maaf saat ini sistem kami sedang ramai pelanggan. Silahkan untuk mencoba beberapa saat lagi.</string>
    <string name="system_error_desc_token">Maaf saat ini sistem kami sedang dalam proses pemeliharaan. Silahkan untuk mencoba beberapa saat lagi.</string>


    <string name="credit_availble">SALDO TERSEDIA</string>
    <string name="customer_type">Anda Membutuhkan Pinjaman? Segera Klik disini!</string>
    <string name="nikmati">Nikmati Kemudahan Pembayaran</string>

    <string name="congretulation">Selamat akun kamu sudah terbuat!</string>
    <string name="congratulation_description">Anda dapat menikmati aktivitas perbankan syariah dengan mudah!</string>

    <string name="e_wallet">e-Wallet Center</string>
    <string name="card_center">Card Center</string>

    <string name="personal_data">Data Pribadi</string>
    <string name="relative_data">Data Kerabat</string>
    <string name="work_data">Data Pekerjaan</string>
    <string name="apply_data">Daftar Sekarang</string>

    <string name="security_code">Verifikasi Nomor</string>


    <string name="otp_verification_description">Masukan kode keamanan yang baru saja dikirimkan ke nomor handphone kamu untuk mulai mendaftar</string>
    <string name="otp_invalid">Kode keamanan salah, Mohon tunggu</string>
    <string name="otp_not_received">Tidak menerima kode keamanan?</string>
    <string name="resend_otp">KIRIM ULANG</string>


    <string name="pengisian">Pengisian Data</string>
    <string name="data_pribadi">Data Pribadi</string>
    <string name="data_diri">Data Diri</string>
    <string name="data_kerabat">Data Kerabat</string>
    <string name="data_pekerjaan">Data Pekerjaan</string>
    <string name="data_home">Data Tempat Tinggal</string>
    <string name="apply_desc">Semua informasi wajib diisi</string>
    <string name="apply_terms">Lengkapi seluruh data berikut sebagai syarat pengajuan</string>
    <string name="progress">0% Completed</string>
    <string name="btn_take_foto">AMBIL FOTO E-KTP</string>
    <string name="btn_take_foto_desc">Pastikan ambil foto E-KTP dengan jelas</string>
    <string name="btn_take_face">AMBIL FOTO WAJAH</string>
    <string name="btn_take_face_desc">Pastikan wajah anda terlihat dengan jelas</string>

    <string name="apply_form_agreement">Saya menyatakan telah mengisi data-data diatas secara baik dan benar</string>

    <string name="kerabat_desc">Pilih kerabat yang berbeda domisili dengan kamu. Kami Akan menghubungi kerabat kamu sebagai bagian proses verifikasi data.</string>

    <string name="input_text">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ01234567890/.,</string>

    <string name="hintPendapatan">Pendapatan Bersih per Bulan</string>

    <string name="camera_view_note">Pastikan kartu E-KTP kamu di dalam dan memenuhi bingkai di atas</string>

    <string name="retake_foto">FOTO ULANG</string>
    <string name="use_foto">Gunakan Foto</string>

    <string name="pulsa">Listrik Prabayar</string>
    <string name="meter">Nomor Meter / ID Pelanggan</string>
    <string name="meter_m">Masukan Nomor Meter disini..</string>

    <string name="rincian">Rincian Pembelian</string>
    <string name="desc">Seluruh transaksi kamu dilakukan dengan cepat dan aman.</string>
    <string name="bayar">BAYAR SEKARANG</string>
    <string name="berhasil">Transaksi Anda Berhasil</string>
    <string name="back_home">Kembali ke Home</string>

    <string name="create_pin">Buat PIN</string>
    <string name="create_secure_pin_message">Buat PIN yang aman untuk membuka aplikasi mySharia</string>

    <string name="confirm_pin">Konfirmasi PIN</string>
    <string name="confirm_pin_description">Ulangi PIN untuk mengkonfirmasi PIN yang baru saja kamu buat</string>
    <string name="confirm_pin_invalid">PIN tidak sesuai!</string>

    <string name="Ubah">Ubah</string>
    <string name="Kirim">Kirim</string>
    <string name="Simpan">Berhenti &amp; Simpan</string>
    <string name="btnSimpan">Simpan</string>
    <string name="err_msg_email_not_valid">Email tidak valid</string>
    <string name="foto_upload_finish">Foto telah sesuai</string>

    <!--    element-->
    <string name="center_face" tools:override="true">Posisikan Wajah Anda Ditengah</string>
    <string name="keep_centered" tools:override="true">Posisikan Wajah Selalu Ditengah</string>
    <string name="watch_circles" tools:override="true">Perhatikan Lingkaran</string>
    <string name="clear_face_view" tools:override="true">Pastikan Wajah Anda Terlihat Jelas dengan Pencahayaan yang Cukup</string>
    <string name="hold_phone_eye_level" tools:override="true">Hold phone at eye level</string>
    <string name="selfie_move_message" tools:override="true">We will automatically take a selfie then you will be prompted to move your eyes to make sure it is you.</string>
    <string name="selfie_message" tools:override="true">You will be asked to frame your face then we will snap a selfie.</string>


    <string name="apply_not_finish">Pendaftaranmu belum selesai. Harap lanjutkan pengisian data untuk menikmati fasilitas mobile banking</string>


    <string name="apply">Daftarkan diri anda sekarang untuk mendapatkan kemudahan aktivitas perbankan di mySharia</string>

    <string name="phone_number_login_ph">No. Handphone Terdaftar</string>

    <string name="agree_checked"><![CDATA[Saya telah membaca dan menyetujui <b>syarat dan ketentuan aplikasi mySharia</b>]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mutasi_rekening">Mutasi Rekening</string>
    <string name="detai_transaksi">Detai Transaksi</string>
    <string name="kembali_ke_home">Kembali Ke Home</string>
    <string name="asyik">Asyik!</string>
</resources>