<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.DialogActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"/>
    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="@color/white"
        android:layout_below="@id/toolbar"
        android:paddingTop="@dimen/pad_12"
        android:paddingLeft="@dimen/pad_20"
        android:paddingRight="@dimen/pad_20"
        android:paddingBottom="@dimen/pad_20"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_icon"
            android:layout_width="fill_parent"
            android:layout_gravity="top"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_alignParentTop="true"
            app:srcCompat="@drawable/ic_success"
            />

        <RelativeLayout
            android:id="@+id/ll_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:layout_below="@id/iv_icon">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title"
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_long_margin"
                android:lineSpacingExtra="8dp"
                android:lineSpacingMultiplier="0.8"
                android:text="@string/congretulation"
                android:textColor="@color/colorDarkGrey"
                android:textSize="@dimen/text_extra_large"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:fontFamily="@font/opensans"
                android:id="@+id/tv_description"
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_medium_margin"
                android:text="@string/congratulation_description"
                android:textColor="@color/black"
                android:layout_below="@id/tv_title"
                android:layout_marginBottom="@dimen/default_long_margin"
                android:textSize="@dimen/text_xs_18" />

        </RelativeLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/selector_btn_primary"
            android:text="@string/asyik"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>