<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.activity.CameraKtpActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/frame_camera"
            android:layout_width="match_parent"
            android:layout_height="@dimen/frame_camera_height"
            android:layout_marginLeft="@dimen/frame_camera_margin"
            android:layout_marginRight="@dimen/frame_camera_margin"
            android:layout_marginTop="-80dp">

            <com.otaliastudios.cameraview.CameraView
                android:id="@+id/camera_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:keepScreenOn="true" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_preview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:visibility="gone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:background="@drawable/bg_stroke_rounded"
                android:padding="10dp" />
        </FrameLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="@dimen/default_long_margin"
            android:text="@string/camera_view_note"
            android:textColor="@color/white"
            android:textSize="@dimen/text_xs_16"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_camera"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/default_long_margin"
        android:background="@drawable/selector_btn_camera"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <RelativeLayout
        android:id="@+id/bottom_preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/default_long_margin"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_retake_foto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:background="@drawable/selector_btn_transparent"
            android:padding="@dimen/default_long_margin"
            android:text="@string/retake_foto"
            android:textAllCaps="true"
            android:onClick="onRetakeFoto"
            android:textColor="@color/dark_blue" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_use_foto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:onClick="onUseFoto"
            android:background="@drawable/selector_btn_primary"
            android:padding="@dimen/default_long_margin"
            android:text="@string/use_foto"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </RelativeLayout>
</RelativeLayout>